working good so far

--- a/intro-to-html/website.html
+++ b/intro-to-html/website.html
@@ -1,6 +1,20 @@
-<button>    
+<!DOCTYPE html>
+<html>  
+<head>  
+  <title>My Page</title>
+
+</head>
+
+<body>  
+  </main>
+</body>
+</html>
+<button>  
+    
   Hello World
 </button>
+
+
 <p>
   This is a paragraph
 </p>
